# tickettrail

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
database/: schema.sql
docs/: AI_COLLABORATION_PROJECT_LOG.md  ARCHIVE_BUNDLE_REVIEW.md  DATA_HEALTH_FILTER_DESIGN.md  DATA_SOURCES.md  FILE_STRUCTURE_PLAN.md  FLIGHT_LOOKUP_AERODATABOX_SCHEMA.md  FLIGHT_LOOKUP_DESIGN.md  FLIGHT_LOOKUP_PROVIDER_REVIEW.md  FLIGHT_LOOKUP_TAURI_CONTRACT.md  ISSUE_CHECKLIST.md  JOURNEY_DESIGN.md  LOCATION_DIRECTORY_DESIGN.md  MULTI_SEGMENT_TICKET_DESIGN.md  OVERVIEW_REDESIGN.md  PLACE_CATALOG_AND_RAIL_GEO_DESIGN.md  PROJECT_STATUS.md  PROMPT_PROBLEM_RECORD.md  RAIL_STATION_GEO_AND_PLACE_REVIEW.md  SETTINGS_DATA_BACKUP_DESIGN.md  TASKS.md  TEST_PLAN.md  UX_REDESIGN_PLAN.md  development-setup.md  requirements-analysis.md  technical-implementation-plan.md  windows-release.md
scripts/: check-release-version.mjs  generate-airports-data.mjs  generate-place-catalog-data.mjs  generate-place-grouping-candidate-review.mjs  generate-place-grouping-data.mjs  generate-rail-geonames-candidate-review.mjs  generate-rail-place-override-priority.mjs  generate-rail-stations-data.mjs  generate-transport-place-data.mjs  run-tickettrail-dev.bat  run-tickettrail-release.bat  sync-version.mjs  validate-rail-station-place-coverage.mjs  (+1 more)
src/: App.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src/flight_lookup/: aerodatabox.rs  mock.rs  mod.rs
(+86 files in other folders)
