[package]
name = "tickettrail"
version = "0.1.0"
description = "Desktop-first ticket archive and itinerary visualizer"
authors = ["ginkgoyin"]
edition = "2021"

[lib]
name = "tickettrail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
uuid = { version = "1.10", features = ["serde", "v4"] }

